More updates to colorGame files

--- a/colorGame.css
+++ b/colorGame.css
@@ -1,5 +1,7 @@
 body {
 	background-color: #232323;
+	margin: 0;
+	font-family: "Montserrat", "Avenir";
 }
 
 #container {
@@ -13,10 +15,15 @@ body {
 	padding-bottom: 30%;
 	float: left;
 	margin: 1.66%;
+	border-radius: 10%;
 }
 
 h1 {
+	text-align: center;
 	color: white;
+	background-color: steelblue;
+	font-weight: normal;
+	margin: 0;
 }
 
 span {
